fix line spacing, work on image preview when editing project with existing image

--- a/app/assets/stylesheets/10-project-show.scss
+++ b/app/assets/stylesheets/10-project-show.scss
@@ -76,6 +76,7 @@
 
 .project-show-description {
     max-width: 80%;
+    line-height: 1.6;
     // margin-top: 25px;
     // padding: 5px;
 }
