--- a/app/assets/stylesheets/11-steps-show-.scss
+++ b/app/assets/stylesheets/11-steps-show-.scss
@@ -39,4 +39,5 @@
     margin: 10px;
     font-size: 16px;
     align-self: center;
+    line-height: 1.6;
 }
